--- a/BeyondMain/CMakeLists.txt
+++ b/BeyondMain/CMakeLists.txt
@@ -1,4 +1,4 @@
-file(GLOB HEADER_FILES "${CMAKE_CURRENT_SOURCE_DIR}/include.*.h")
+file(GLOB HEADER_FILES "${CMAKE_CURRENT_SOURCE_DIR}/include/*.h")
 file(GLOB SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
 
 set(LIBRARIES)
